--- a/p/llm-lecture1/index.html
+++ b/p/llm-lecture1/index.html
@@ -895,6 +895,7 @@ Let&rsquo;s try to tokenize text with the modified tokenizer:</p>
         document.head.appendChild(customFont);
     }());
 </script>
+<script src=https://CarlossQAQ.github.io/background/sakura.js></script>
 
     </body>
 </html>
