--- a/404.html
+++ b/404.html
@@ -309,6 +309,7 @@
         document.head.appendChild(customFont);
     }());
 </script>
+<script src=https://CarlossQAQ.github.io/background/sakura.js></script>
 
     </body>
 </html>
