--- a/p/marcov_chain_prediction_algorithm/index.html
+++ b/p/marcov_chain_prediction_algorithm/index.html
@@ -740,6 +740,7 @@ $$</p>
         document.head.appendChild(customFont);
     }());
 </script>
+<script src=https://CarlossQAQ.github.io/background/sakura.js></script>
 
     </body>
 </html>
