--- a/p/math-typesetting/index.html
+++ b/p/math-typesetting/index.html
@@ -607,6 +607,7 @@ $$</p>
         document.head.appendChild(customFont);
     }());
 </script>
+<script src=https://CarlossQAQ.github.io/background/sakura.js></script>
 
     </body>
 </html>
