--- a/zh-cn/关于/index.html
+++ b/zh-cn/关于/index.html
@@ -484,6 +484,7 @@
         document.head.appendChild(customFont);
     }());
 </script>
+<script src=https://CarlossQAQ.github.io/background/sakura.js></script>
 
     </body>
 </html>
