--- a/404.html
+++ b/404.html
@@ -310,6 +310,26 @@
     }());
 </script>
 <script src=https://CarlossQAQ.github.io/background/sakura.js></script>
-
+<script src="https://utteranc.es/client.js"
+        repo="CarlossQAQ/CarlossQAQ.github.io"
+        issue-term="pathname"
+        label="❤️"
+        theme="github-dark"
+        crossorigin="anonymous"
+        async>
+</script>
+<script>
+        document.getElementById("theme-toggle").addEventListener("click", () => {
+          const theme = document.body.className.includes("dark")
+            ? "github-light"
+            : "photon-dark";
+          const message = {
+            type: "set-theme",
+            theme: theme,
+          };
+          const utteranc = document.querySelector(".utterances-frame");
+          utteranc.contentWindow.postMessage(message, "https://utteranc.es");
+        });
+      </script>
     </body>
 </html>
