--- a/index.html
+++ b/index.html
@@ -670,6 +670,12 @@
         crossorigin="anonymous"
         async>
 </script>
+
+<style>
+    .post-content{
+        text-align: center;
+    }
+</style>
 <script>
         document.getElementById("theme-toggle").addEventListener("click", () => {
           const theme = document.body.className.includes("dark")
