--- a/p/llm-lecture1/index.html
+++ b/p/llm-lecture1/index.html
@@ -904,6 +904,12 @@ Let&rsquo;s try to tokenize text with the modified tokenizer:</p>
         crossorigin="anonymous"
         async>
 </script>
+
+<style>
+    .post-content{
+        text-align: center;
+    }
+</style>
 <script>
         document.getElementById("theme-toggle").addEventListener("click", () => {
           const theme = document.body.className.includes("dark")
