--- a/p/marcov_chain_prediction_algorithm/index.html
+++ b/p/marcov_chain_prediction_algorithm/index.html
@@ -749,6 +749,12 @@ $$</p>
         crossorigin="anonymous"
         async>
 </script>
+
+<style>
+    .post-content{
+        text-align: center;
+    }
+</style>
 <script>
         document.getElementById("theme-toggle").addEventListener("click", () => {
           const theme = document.body.className.includes("dark")
