--- a/p/disease-detection-program-logbookcontinuously_updated/index.html
+++ b/p/disease-detection-program-logbookcontinuously_updated/index.html
@@ -297,6 +297,14 @@
     <li><a href="#1113---project-kickoff">11.13 - Project Kickoff</a></li>
     <li><a href="#1124---keyword-assignment-and-tool-selection">11.24 - Keyword Assignment and Tool Selection</a></li>
     <li><a href="#1127---second-team-meeting">11.27 - Second Team Meeting</a></li>
+    <li><a href="#1203---third-team-meeting">12.03 - Third Team Meeting</a>
+      <ol>
+        <li><a href="#keyword-merging">Keyword Merging</a></li>
+        <li><a href="#keyword-and-annotation-adjustments">Keyword and Annotation Adjustments</a></li>
+        <li><a href="#improvement-requirements">Improvement Requirements</a></li>
+        <li><a href="#tool-update">Tool Update</a></li>
+      </ol>
+    </li>
   </ol>
 </nav>
         </div>
@@ -353,7 +361,7 @@
 
 
                 <time class="article-time--reading">
-                    1 minute read
+                    2 minute read
                 </time>
             </div>
         
@@ -440,6 +448,43 @@
 </li>
 </ol>
 <hr>
+<h2 id="1203---third-team-meeting">12.03 - Third Team Meeting
+</h2><h3 id="keyword-merging">Keyword Merging
+</h3><div class="table-wrapper"><table>
+<thead>
+<tr>
+<th><strong>Original Keywords</strong></th>
+<th><strong>Merged Keyword</strong></th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>Dementia - Alzheimer&rsquo;s Disease</td>
+<td>Dementia/Alzheimer&rsquo;s Disease</td>
+</tr>
+<tr>
+<td>Bipolar Disorder - Mood Disorders</td>
+<td>Bipolar Disorder</td>
+</tr>
+</tbody>
+</table></div>
+<h3 id="keyword-and-annotation-adjustments">Keyword and Annotation Adjustments
+</h3><ol>
+<li><strong>Keyword Cleanup</strong>: Removed content related to novels and movies; brackets and quotation marks were excluded.</li>
+<li><strong>Retweet Text Processing</strong>: Retained only the current user’s text in retweets.</li>
+<li><strong>Annotation Data Expansion</strong>: Ensured at least <strong>500 annotations per keyword.</strong></li>
+<li><strong>Keyword Extension</strong>: Added suffixes to enhance search results.</li>
+<li><strong>Keyword Refinement</strong>: Adjusted keywords and search strategies, such as replacing &ldquo;PTSD&rdquo; with a combined &ldquo;PTSD and Trauma disorder.&rdquo;</li>
+<li><strong>Keyword Deletion</strong>: Removed irrelevant keywords, such as &ldquo;Heatiness&rdquo; and &ldquo;Mental illness.&rdquo;</li>
+<li><strong>Independent Annotation for Similar Keywords</strong>: Ensured at least 500 annotations for each group.</li>
+</ol>
+<h3 id="improvement-requirements">Improvement Requirements
+</h3><ol>
+<li>Literature review on two critical papers.</li>
+<li>Increase meeting frequency for better alignment.</li>
+</ol>
+<h3 id="tool-update">Tool Update
+</h3><p>Upgraded to Annotation Tool V4 with enhanced functionality, improved autosave, and added deletion features.</p>
 
 </section>
 
